# openproject-mcp

./: .gitignore  Jenkinsfile  README.md
ansible/: ansible.cfg  requirements.yml
apps/mcp-server/: .dockerignore  .env.docker  .env.example  DOCKER.md  Dockerfile  README.md  conftest.py  docker-build.sh  docker-compose.mcp-only.yml  docker-compose.openproject.yml  docker-compose.yml  pyproject.toml
apps/mcp-server/docs/: kafka-replay.md
apps/mcp-server/scripts/: bench_latency.py
apps/mcp-server/src/openproject_mcp_server/: __init__.py  __main__.py  api_client.py  config.py  metrics.py  server.py  tracing.py  transport.py
apps/mcp-server/src/openproject_mcp_server/tools/: __init__.py  _validate.py  events.py  lookups.py  memberships.py  misc.py  projects.py  relations.py  time_entries.py  users.py  work_packages.py
apps/mcp-server/src/openproject_mcp_server/webhooks/: __init__.py  consumer.py  events_cache.py  hmac_validator.py  ingest.py  kafka_client.py  routes.py
apps/mcp-server/tests/: __init__.py  test_api_client.py  test_config.py  test_events_cache.py  test_integration.py  test_kafka_client.py  test_metrics.py  test_server.py  test_tool_get_recent_events.py  test_tracing.py  test_transport.py  test_webhooks_consumer.py  test_webhooks_hmac.py  test_webhooks_ingest.py
argocd/: README.md  image-updater-config.yaml  install.md
chaos/: README.md  install.md  kafka-broker-kill.yaml  network-latency.yaml  nightly-cronjob.yaml  pod-kill.yaml
docs/: architecture.md  observability.md
istio/: authorization-policy.yaml  destination-rule.yaml  gateway.yaml  install.md  peer-authentication.yaml  telemetry.yaml  virtual-service.yaml
jenkins/: .env.example  Dockerfile  (+4 more)
(+188 files in other folders)
